--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-<h1 class="ss">DIJITAL CLOCK</h1>
-<p class="ds">HTML CSS & JS</p>
 <div>
-    <p class="sd"></p>
-    <h1 class="dd"></h1>
+    <label for="sd">email:</label>
+<input type="email" class="form-control " id="sd"> <img class="img1" src="./true.svg" alt="">
+<label for="ss">ad:</label>
+<input type="text" class="form-control" id="ss" minlength="2"> <img class="img2" src="./true.svg" alt="">
+<label for="sf">yas:</label>
+<input type="number" class="form-control" id="sf" min="18">   <img class="img3" src="./true.svg" alt="">
+<button type="submit" class="btn btn-primary">tesdiqle</button>
+<p></p>
 </div>
-
 
 
 
